--- a/src/styles/_settings.scss
+++ b/src/styles/_settings.scss
@@ -148,6 +148,10 @@ $fontPlay: "Play";
   }
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   font-family: $fontInt;
   background: $colorNavbar;
