--- a/src/styles/_settings.scss
+++ b/src/styles/_settings.scss
@@ -17,6 +17,7 @@ $boxShadowCard: rgba(0, 0, 0, 0.4) 0px 2px 4px,
 $gradientBlueWhite: linear-gradient(to right, #2980b9, #6dd5fa, #ffffff);
 $gradientCard: linear-gradient(to right, #8e9eab, #eef2f3);
 $marginCenter: 0 auto;
+$regularTransition: all 0.3s linear;
 
 @font-face {
   font-family: "Bruno";
