--- a/src/styles/components/_animationBg.scss
+++ b/src/styles/components/_animationBg.scss
@@ -1,6 +1,7 @@
 .bg-animation {
-  min-height: 100vh;
   @include flexContainer;
+  position: relative;
+  min-height: 90vh;
   background: $colorB2;
 
   #target {
@@ -11,6 +12,20 @@
       color: $colorW;
       position: relative;
       cursor: default;
+      opacity: 0;
+      animation: text-focus-in 0.6s cubic-bezier(0.55, 0.085, 0.68, 0.53) 0.1s
+      forwards;
+      
+      @keyframes text-focus-in {
+        0% {
+          filter: blur(12px);
+          opacity: 0.5;
+        }
+        100% {
+          filter: blur(0px);
+          opacity: 1;
+        }
+      }
 
       &::selection {
         background: none;
@@ -49,6 +64,52 @@
           display: none;
         }
       }
+    }
+  }
+
+  a {
+    position: absolute;
+    color: $colorW;
+    font-size: 1.3rem;
+    bottom: 20%;
+    transition: $regularTransition;
+    z-index: 3;
+    opacity: 0;
+    animation: arrowAnim 0.7s cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.15s
+      forwards;
+
+    @keyframes arrowAnim {
+      0% {
+        transform: scale(0);
+        opacity: 0.2;
+      }
+      100% {
+        transform: scale(1);
+        opacity: 1;
+      }
+    }
+
+    &:hover {
+      color: $colorB2;
+
+      &::after {
+        background: $colorW;
+      }
+    }
+
+    &::after {
+      position: absolute;
+      overflow: hidden;
+      content: "";
+      display: block;
+      border-radius: 50%;
+      border: 1px solid $colorW;
+      width: 60px;
+      height: 60px;
+      bottom: -17px;
+      transform: translateX(-40%);
+      z-index: -1;
+      transition: $regularTransition;
     }
   }
 }
