--- a/src/styles/_Home.scss
+++ b/src/styles/_Home.scss
@@ -77,7 +77,7 @@ main {
         display: grid;
         grid-template-columns: 50% 50%;
 
-        & > .anim-intro {
+        & > .anim-intro-in {
           animation: glowIn 1.4s $easeout forwards;
 
           @keyframes glowIn {
@@ -87,22 +87,67 @@ main {
           }
         }
 
+        & > .anim-intro-out {
+          background: $colorW;
+          animation: glowOut 0.7s $delayOut $easeout forwards;
+
+          @keyframes glowOut {
+            to {
+              background: transparent;
+            }
+          }
+        }
+
         .introduction {
           @include columnFlex;
           gap: 10px;
-          background: transparent;
           padding: 10px 5px;
           border-radius: 12px;
-
-          &:hover {
-            animation: colorInOc 0.6s 1.6s $easeout forwards;
-
-            animation: colorInDp 0.6s 1.9s $easeout forwards;
-          }
 
           p {
             width: 90%;
             text-align: center;
+
+            span.open-classrooms-in {
+              animation: colorInOc 0.3s 0.3s $easeout forwards;
+
+              @keyframes colorInOc {
+                to {
+                  color: $colorOc;
+                }
+              }
+            }
+            span.open-classrooms-out {
+              animation: colorOutOc 0.3s $delayOut $easeout forwards;
+              color: $colorOc;
+
+              @keyframes colorOutOc {
+                to {
+                  color: initial;
+                }
+              }
+            }
+
+            span.diplome-in {
+              animation: colorInDp 0.8s 1s $easeout forwards;
+
+              @keyframes colorInDp {
+                to {
+                  color: $colorL;
+                }
+              }
+            }
+
+            span.diplome-out {
+              color: $colorL;
+              animation: colorOutDp 0.5s $delayOut $easeout forwards;
+
+              @keyframes colorOutDp {
+                to {
+                  color: initial;
+                }
+              }
+            }
           }
 
           ul.information {
@@ -113,14 +158,9 @@ main {
               h5 {
                 font-size: 0.9rem;
 
-                span {
-                  text-decoration: none;
-                  transition: $regularTransition;
-                }
-
-                span.anim-info {
+                span.anim-info-in {
                   position: relative;
-                  animation: wordColorIn 0.8s 1s $easeout forwards;
+                  animation: wordColorIn 0.5s 0.4s $easeout forwards;
 
                   @keyframes wordColorIn {
                     to {
@@ -137,7 +177,7 @@ main {
                     height: 2px;
                     left: 0;
                     bottom: -2px;
-                    animation: underlineIn 0.8s 1s $easeout forwards;
+                    animation: underlineIn 0.5s 0.4s $easeout forwards;
                     transform-origin: left;
                   }
 
@@ -147,6 +187,113 @@ main {
                     }
                   }
                 }
+
+                span.anim-info-out {
+                  position: relative;
+                  color: $colorO;
+                  animation: wordColorOut 0.8s $delayOut $easeout forwards;
+
+                  @keyframes wordColorOut {
+                    to {
+                      color: initial;
+                    }
+                  }
+
+                  &::after {
+                    content: "";
+                    background: $colorO;
+                    position: absolute;
+                    border-radius: 10px;
+                    width: 98%;
+                    height: 2px;
+                    left: 0;
+                    bottom: -2px;
+                    animation: underlineOut 0.8s $delayOut $easeout forwards;
+                    transform-origin: left;
+                  }
+
+                  @keyframes underlineOut {
+                    to {
+                      width: 0;
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+
+      .anim-in {
+        animation: glow2In 1.4s $easeout forwards;
+
+        @keyframes glow2In {
+          to {
+            background: $colorW;
+          }
+        }
+      }
+
+      .anim-out {
+        background: $colorW;
+        animation: glow2Out 0.7s $delayOut $easeout forwards;
+
+        @keyframes glow2Out {
+          to {
+            background: transparent;
+          }
+        }
+      }
+      .parcours {
+        @include columnFlex;
+        padding: 10px 5px;
+        border-radius: 12px;
+        position: relative;
+
+        & > h3.bubble-title {
+          position: absolute;
+          top: 8.5px;
+        }
+
+        p {
+          width: 90%;
+          line-height: 30px;
+
+          span.passion-in {
+            animation: wordColorIn1 0.6s 0.5s $easeout forwards;
+
+            @keyframes wordColorIn1 {
+              to {
+                color: $colorR;
+              }
+            }
+          }
+
+          span.dev-web-in {
+            animation: wordColorIn2 0.6s 1s $easeout forwards;
+            @keyframes wordColorIn2 {
+              to {
+                color: $colorR;
+              }
+            }
+          }
+
+          span.passion-out {
+            animation: wordColorOut1 0.2s $delayOut $easeout forwards;
+            color: $colorR;
+            @keyframes wordColorOut1 {
+              to {
+                color: initial;
+              }
+            }
+          }
+
+          span.dev-web-out {
+            color: $colorR;
+            animation: wordColorOut2 0.4s $delayOut $easeout forwards;
+            @keyframes wordColorOut2 {
+              to {
+                color: initial;
               }
             }
           }
@@ -154,7 +301,7 @@ main {
       }
     }
 
-    .intro-card {
+    .why-me-container {
       @include flexContainer;
       @include bubble;
 
@@ -167,9 +314,63 @@ main {
         width: 95%;
         text-align: center;
 
-        span#alternance {
-          color: $colorR;
-          font-weight: 700;
+        span.curieux-in {
+          animation: colorWordIn1 0.5s 1s $easeout forwards;
+
+          @keyframes colorWordIn1 {
+            to {
+              color: $colorO;
+            }
+          }
+        }
+
+        span.curieux-out {
+          color: $colorO;
+          animation: colorWordOut1 0.5s 0.2s $easeout forwards;
+
+          @keyframes colorWordOut1 {
+            to {
+              color: initial;
+            }
+          }
+        }
+
+        span.rigoureux-in {
+          animation: colorWordIn2 0.5s 1.5s $easeout forwards;
+          @keyframes colorWordIn2 {
+            to {
+              color: $colorO;
+            }
+          }
+        }
+
+        span.rigoureux-out {
+          color: $colorO;
+          animation: colorWordOut2 0.5s 0.6s $easeout forwards;
+          @keyframes colorWordOut2 {
+            to {
+              color: initial;
+            }
+          }
+        }
+
+        span.autonome-in {
+          animation: colorWordIn3 0.5s 2s $easeout forwards;
+          @keyframes colorWordIn3 {
+            to {
+              color: $colorO;
+            }
+          }
+        }
+
+        span.autonome-out {
+          animation: colorWordOut3 0.5s 0.6s $easeout forwards;
+          color: $colorO;
+          @keyframes colorWordOut3 {
+            to {
+              color: initial;
+            }
+          }
         }
       }
     }
