--- a/src/styles/_settings.scss
+++ b/src/styles/_settings.scss
@@ -18,7 +18,8 @@ $gradientBlueWhite: linear-gradient(to right, #2980b9, #6dd5fa, #ffffff);
 $gradientCard: linear-gradient(to right, #8e9eab, #eef2f3);
 $marginCenter: 0 auto;
 $regularTransition: all 0.3s linear;
-$easeout: cubic-bezier(0.250, 0.460, 0.450, 0.940);
+$easeout: cubic-bezier(0.25, 0.46, 0.45, 0.94);
+$delayOut: 0.1s;
 
 @font-face {
   font-family: "Bruno";
@@ -198,3 +199,4 @@ h5 {
 h2 {
   font-family: $fontMerri;
 }
+
