--- a/src/styles/_Home.scss
+++ b/src/styles/_Home.scss
@@ -1,17 +1,17 @@
 main {
-  background: $gradientCard;
+  background: #838db1;
   @include columnFlex;
   gap: 15px;
-  min-height: 90vh;
+  min-height: 100vh;
   position: relative;
-  padding-bottom: 5px;
+  padding: 20px 0;
 
   h2 {
     text-align: center;
     font-family: $fontExo;
     position: relative;
 
-    @media screen and (max-width: 810px) {
+    @media screen and (max-width: 900px) {
       font-size: 1rem;
     }
 
@@ -21,18 +21,25 @@ main {
       top: 25%;
       right: -30px;
 
-      @media screen and (max-width: 810px) {
+      @media screen and (max-width: 900px) {
         display: none;
       }
     }
   }
 
   .infos {
-    @include columnFlex;
-    grid-gap: 15px;
+    display: grid;
+    grid-gap: 10px;
+    grid-template-areas:
+      "img about"
+      "img why";
     @include regularFont;
     font-size: 0.95rem;
     font-family: $fontDos;
+
+    @media screen and (max-width: 900px) {
+      @include columnFlex;
+    }
 
     .bubble-title {
       font-family: $fontMerri;
@@ -45,255 +52,241 @@ main {
       border-radius: 10px;
     }
 
-    .info-content-top {
+    .img-container {
+      @include imgContainer;
+      grid-area: img;
+      max-width: 360px;
+      position: relative;
+
+      @media screen and (max-width: 900px) {
+        padding-bottom: 100px;
+
+      }
+
+      img {
+        width: 45%;
+        border-radius: 15px;
+        border: 1px solid $colorB;
+        box-shadow: $boxShadowCard;
+        opacity: 0;
+
+        @media screen and (max-width: 900px) {
+          width: 35%;
+        }
+      }
+
+      .btn-container {
+        a {
+
+          button#btn-contact,
+          button#btn-cv {
+            @include flexContainer;
+            gap: 5px;
+            outline: none;
+            border: none;
+            position: absolute;
+            cursor: pointer;
+            padding: 5px 10px;
+            border-radius: 12px;
+            transition: $regularTransition;
+            box-shadow: $boxShadowCard;
+            transform: translateX(-50%);
+            opacity: 0;
+
+            p {
+              font-family: $fontMerri;
+            }
+          }
+
+          span#down-arrow,
+          span#cv {
+            transition: $regularTransition;
+          }
+
+          button#btn-contact {
+            bottom: 10%;
+            left: 50%;
+
+            @media screen and (max-width: 900px) {
+              bottom: 2%;
+            }
+
+            &:hover {
+              gap: 15px;
+              background: $colorB2;
+              color: $colorW;
+              font-weight: 700;
+              box-shadow: $btnShadow;
+
+              span#down-arrow {
+                transform: rotate(90deg) scale(1.3);
+                color: $colorW;
+              }
+            }
+          }
+
+          button#btn-cv {
+            bottom: 20%;
+            left: 50%;
+            width: 65%;
+
+            @media screen and (max-width: 900px) {
+              bottom: 18%;
+            }
+
+            span#cv {
+              font-size: 1rem;
+              margin-left: 8px;
+            }
+
+            &:hover {
+              gap: 15px;
+              background: $colorB2;
+              color: $colorW;
+              font-weight: 700;
+              box-shadow: $btnShadow;
+
+              span#cv {
+                transform: scale(1.3);
+                color: $colorW;
+              }
+            }
+          }
+        }
+      }
+    }
+    .about-me-container {
+      @include bubble;
+      grid-area: about;
+      padding: 20px;
+      width: 90%;
       display: grid;
-      grid-template-columns: 20% 80%;
+      grid-template-columns: 50% 50%;
 
-      @media screen and (max-width: 810px) {
+      @media screen and (max-width: 865px) {
         @include columnFlex;
       }
 
-      .img-container {
-        @include imgContainer;
-        margin: $marginCenter;
-        width: 90%;
-
-        img {
-          width: 50%;
-          border-radius: 15px;
-          border: 1px solid $colorB;
-          box-shadow: $boxShadowCard;
-
-          @media screen and (max-width: 810px) {
-            width: 35%;
-          }
-        }
-      }
-
-      .about-me-container {
-        @include bubble;
-        padding: 20px;
-        width: 82.5%;
-        display: grid;
-        grid-template-columns: 50% 50%;
-
-        & > .anim-intro-in {
-          animation: glowIn 1.4s $easeout forwards;
-
-          @keyframes glowIn {
-            to {
-              background: $colorW;
-            }
-          }
-        }
-
-        & > .anim-intro-out {
-          background: $colorW;
-          animation: glowOut 0.7s $delayOut $easeout forwards;
-
-          @keyframes glowOut {
-            to {
-              background: transparent;
-            }
-          }
-        }
-
-        .introduction {
-          @include columnFlex;
-          gap: 10px;
-          padding: 10px 5px;
-          border-radius: 12px;
-
-          p {
-            width: 90%;
-            text-align: center;
-
-            span.open-classrooms-in {
-              animation: colorInOc 0.3s 0.3s $easeout forwards;
-
-              @keyframes colorInOc {
-                to {
-                  color: $colorOc;
-                }
-              }
-            }
-            span.open-classrooms-out {
-              animation: colorOutOc 0.3s $delayOut $easeout forwards;
-              color: $colorOc;
-
-              @keyframes colorOutOc {
-                to {
-                  color: initial;
-                }
-              }
-            }
-
-            span.diplome-in {
-              animation: colorInDp 0.8s 1s $easeout forwards;
-
-              @keyframes colorInDp {
-                to {
-                  color: $colorL;
-                }
-              }
-            }
-
-            span.diplome-out {
-              color: $colorL;
-              animation: colorOutDp 0.5s $delayOut $easeout forwards;
-
-              @keyframes colorOutDp {
-                to {
-                  color: initial;
-                }
-              }
-            }
-          }
-
-          ul.information {
-            display: flex;
-            flex-direction: column;
-
-            li {
-              h5 {
-                font-size: 0.9rem;
-
-                span.anim-info-in {
-                  position: relative;
-                  animation: wordColorIn 0.5s 0.4s $easeout forwards;
-
-                  @keyframes wordColorIn {
-                    to {
-                      color: $colorO;
-                    }
-                  }
-
-                  &::after {
-                    content: "";
-                    background: $colorO;
-                    position: absolute;
-                    border-radius: 10px;
-                    width: 0;
-                    height: 2px;
-                    left: 0;
-                    bottom: -2px;
-                    animation: underlineIn 0.5s 0.4s $easeout forwards;
-                    transform-origin: left;
-                  }
-
-                  @keyframes underlineIn {
-                    to {
-                      width: 98%;
-                    }
-                  }
-                }
-
-                span.anim-info-out {
-                  position: relative;
-                  color: $colorO;
-                  animation: wordColorOut 0.8s $delayOut $easeout forwards;
-
-                  @keyframes wordColorOut {
-                    to {
-                      color: initial;
-                    }
-                  }
-
-                  &::after {
-                    content: "";
-                    background: $colorO;
-                    position: absolute;
-                    border-radius: 10px;
-                    width: 98%;
-                    height: 2px;
-                    left: 0;
-                    bottom: -2px;
-                    animation: underlineOut 0.8s $delayOut $easeout forwards;
-                    transform-origin: left;
-                  }
-
-                  @keyframes underlineOut {
-                    to {
-                      width: 0;
-                    }
-                  }
-                }
-              }
-            }
-          }
-        }
-      }
-
-      .anim-in {
-        animation: glow2In 1.4s $easeout forwards;
-
-        @keyframes glow2In {
-          to {
-            background: $colorW;
-          }
-        }
-      }
-
-      .anim-out {
-        background: $colorW;
-        animation: glow2Out 0.7s $delayOut $easeout forwards;
-
-        @keyframes glow2Out {
-          to {
-            background: transparent;
-          }
-        }
-      }
-      .parcours {
+      .introduction {
         @include columnFlex;
+        gap: 10px;
         padding: 10px 5px;
         border-radius: 12px;
-        position: relative;
-
-        & > h3.bubble-title {
-          position: absolute;
-          top: 8.5px;
-        }
+        margin-right: 3px;
 
         p {
           width: 90%;
-          line-height: 30px;
+          text-align: center;
 
-          span.passion-in {
-            animation: wordColorIn1 0.6s 0.5s $easeout forwards;
+          span.open-classrooms-in {
+            animation: colorInOc 0.3s 0.3s $easeout forwards;
 
-            @keyframes wordColorIn1 {
+            @keyframes colorInOc {
               to {
-                color: $colorR;
+                color: $colorOc;
               }
             }
           }
+          span.open-classrooms-out {
+            animation: colorOutOc 0.3s $delayOut $easeout forwards;
+            color: $colorOc;
 
-          span.dev-web-in {
-            animation: wordColorIn2 0.6s 1s $easeout forwards;
-            @keyframes wordColorIn2 {
-              to {
-                color: $colorR;
-              }
-            }
-          }
-
-          span.passion-out {
-            animation: wordColorOut1 0.2s $delayOut $easeout forwards;
-            color: $colorR;
-            @keyframes wordColorOut1 {
+            @keyframes colorOutOc {
               to {
                 color: initial;
               }
             }
           }
 
-          span.dev-web-out {
-            color: $colorR;
-            animation: wordColorOut2 0.4s $delayOut $easeout forwards;
-            @keyframes wordColorOut2 {
+          span.diplome-in {
+            animation: colorInDp 0.8s 1s $easeout forwards;
+
+            @keyframes colorInDp {
+              to {
+                color: $colorL;
+              }
+            }
+          }
+
+          span.diplome-out {
+            color: $colorL;
+            animation: colorOutDp 0.5s $delayOut $easeout forwards;
+
+            @keyframes colorOutDp {
               to {
                 color: initial;
+              }
+            }
+          }
+        }
+
+        ul.information {
+          display: flex;
+          flex-direction: column;
+
+          li {
+            h5 {
+              font-size: 0.9rem;
+
+              span.anim-info-in {
+                position: relative;
+                animation: wordColorIn 0.5s 0.4s $easeout forwards;
+
+                @keyframes wordColorIn {
+                  to {
+                    color: $colorO;
+                  }
+                }
+
+                &::after {
+                  content: "";
+                  background: $colorO;
+                  position: absolute;
+                  border-radius: 10px;
+                  width: 0;
+                  height: 2px;
+                  left: 0;
+                  bottom: -2px;
+                  animation: underlineIn 0.5s 0.4s $easeout forwards;
+                  transform-origin: left;
+                }
+
+                @keyframes underlineIn {
+                  to {
+                    width: 98%;
+                  }
+                }
+              }
+
+              span.anim-info-out {
+                position: relative;
+                color: $colorO;
+                animation: wordColorOut 0.8s $delayOut $easeout forwards;
+
+                @keyframes wordColorOut {
+                  to {
+                    color: initial;
+                  }
+                }
+
+                &::after {
+                  content: "";
+                  background: $colorO;
+                  position: absolute;
+                  border-radius: 10px;
+                  width: 98%;
+                  height: 2px;
+                  left: 0;
+                  bottom: -2px;
+                  animation: underlineOut 0.8s $delayOut $easeout forwards;
+                  transform-origin: left;
+                }
+
+                @keyframes underlineOut {
+                  to {
+                    width: 0;
+                  }
+                }
               }
             }
           }
@@ -301,9 +294,88 @@ main {
       }
     }
 
-    .why-me-container {
-      @include flexContainer;
-      @include bubble;
+    .parcours {
+      @include columnFlex;
+      padding: 10px 5px;
+      border-radius: 12px;
+      margin-left: 3px;
+      position: relative;
+
+      @media screen and (max-width: 900px) {
+        position: static;
+        margin-top: 5px;
+        gap: 5px;
+      }
+
+      & > h3.bubble-title {
+        position: absolute;
+        top: 8.5px;
+
+        @media screen and (max-width: 900px) {
+          position: static;
+        }
+      }
+
+      p {
+        width: 90%;
+        line-height: 30px;
+
+        span.passion-in {
+          animation: wordColorIn1 0.6s 0.5s $easeout forwards;
+
+          @keyframes wordColorIn1 {
+            to {
+              color: $colorR;
+            }
+          }
+        }
+
+        span.dev-web-in {
+          animation: wordColorIn2 0.6s 1s $easeout forwards;
+          @keyframes wordColorIn2 {
+            to {
+              color: $colorR;
+            }
+          }
+        }
+
+        span.passion-out {
+          animation: wordColorOut1 0.2s $delayOut $easeout forwards;
+          color: $colorR;
+          @keyframes wordColorOut1 {
+            to {
+              color: initial;
+            }
+          }
+        }
+
+        span.dev-web-out {
+          color: $colorR;
+          animation: wordColorOut2 0.4s $delayOut $easeout forwards;
+          @keyframes wordColorOut2 {
+            to {
+              color: initial;
+            }
+          }
+        }
+      }
+    }
+  }
+
+  .why-me-container {
+    @include bubble;
+    width: 91.5%;
+    grid-area: why;
+
+    @media screen and (max-width: 900px) {
+      line-height: 33px;
+    }
+
+    .why-me {
+      @include columnFlex;
+      gap: 10px;
+      padding: 10px 5px;
+      border-radius: 12px;
 
       @media screen and (max-width: 810px) {
         min-width: 83%;
@@ -315,7 +387,7 @@ main {
         text-align: center;
 
         span.curieux-in {
-          animation: colorWordIn1 0.5s 1s $easeout forwards;
+          animation: colorWordIn1 0.5s 0.5s $easeout forwards;
 
           @keyframes colorWordIn1 {
             to {
@@ -336,7 +408,7 @@ main {
         }
 
         span.rigoureux-in {
-          animation: colorWordIn2 0.5s 1.5s $easeout forwards;
+          animation: colorWordIn2 0.5s 1s $easeout forwards;
           @keyframes colorWordIn2 {
             to {
               color: $colorO;
@@ -346,7 +418,7 @@ main {
 
         span.rigoureux-out {
           color: $colorO;
-          animation: colorWordOut2 0.5s 0.6s $easeout forwards;
+          animation: colorWordOut2 0.5s 0.4s $easeout forwards;
           @keyframes colorWordOut2 {
             to {
               color: initial;
@@ -355,7 +427,7 @@ main {
         }
 
         span.autonome-in {
-          animation: colorWordIn3 0.5s 2s $easeout forwards;
+          animation: colorWordIn3 0.5s 1.5s $easeout forwards;
           @keyframes colorWordIn3 {
             to {
               color: $colorO;
