--- a/src/styles/_settings.scss
+++ b/src/styles/_settings.scss
@@ -1,19 +1,20 @@
 $colorW: #ffff;
 $colorFilterBar: #ecececf2;
 $colorB: #000;
-$colorB2: #121d22;
+$colorB2: #171e32;
 $colorB3: rgba(51, 65, 85, 1);
 $colorG2: lightgrey;
 $colorR: crimson;
 $colorO: orangered;
 $colorL: lightgreen;
 $colorCard: rgb(236, 236, 236);
-$colorNavbar: rgb(63, 60, 72);
+$colorNavbar: #181935;
 $colorHover: #78d3e7;
 $colorOc: rgb(116, 81, 235);
 $colorFs: rgb(4, 191, 211);
 $boxShadowCard: rgba(0, 0, 0, 0.4) 0px 2px 4px,
   rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+$btnShadow: 0 0 6px 2px rgba(0, 0, 0, 0.4);
 $gradientBlueWhite: linear-gradient(to right, #2980b9, #6dd5fa, #ffffff);
 $gradientCard: linear-gradient(to right, #8e9eab, #eef2f3);
 $marginCenter: 0 auto;
@@ -149,6 +150,18 @@ $fontPlay: "Play";
   width: 80%;
 }
 
+@mixin btn {
+  border: none;
+  background: none;
+  cursor: pointer;
+  position: relative;
+  display: flex;
+  font-weight: 600;
+  gap: 15px;
+  font-size: 1rem;
+  align-items: center;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -171,7 +184,7 @@ body {
 
 .background-section {
   width: 100%;
-  --s: 25px;
+  --s: 5px;
 
   --c: #0000, #282828 0.5deg 119.5deg, #0000 120deg;
   --g1: conic-gradient(from 60deg at 56.25% calc(425% / 6), var(--c));
@@ -200,3 +213,124 @@ h2 {
   font-family: $fontMerri;
 }
 
+h3.underline-in {
+  position: relative;
+  animation: titleColorIn 0.5s 0.4s $easeout forwards;
+
+  @keyframes titleColorIn {
+    to {
+      color: $colorW;
+    }
+  }
+
+  &::after {
+    content: "";
+    background: $colorW;
+    position: absolute;
+    border-radius: 10px;
+    width: 0;
+    height: 2px;
+    left: 0;
+    bottom: -2px;
+    animation: underlineTitleIn 0.5s 0.4s $easeout forwards;
+    transform-origin: left;
+  }
+
+  @keyframes underlineTitleIn {
+    to {
+      width: 100%;
+    }
+  }
+}
+
+h3.underline-out {
+  position: relative;
+  color: $colorW;
+  animation: titleColorOut 0.8s $delayOut $easeout forwards;
+
+  @keyframes titleColorOut {
+    to {
+      color: $colorCard;
+    }
+  }
+
+  &::after {
+    content: "";
+    background: $colorW;
+    position: absolute;
+    border-radius: 10px;
+    width: 100%;
+    height: 2px;
+    left: 0;
+    bottom: -2px;
+    animation: underlineTitleOut 0.5s 0.4s $easeout forwards;
+    transform-origin: right;
+  }
+
+  @keyframes underlineTitleOut {
+    to {
+      width: 0;
+    }
+  }
+}
+
+.glow-in {
+  background: $colorCard;
+  animation: glowIn 1s $easeout forwards;
+
+  @keyframes glowIn {
+    to {
+      background: $colorW;
+    }
+  }
+}
+
+.glow-out {
+  background: $colorW;
+  animation: glowOut 0.5s $delayOut $easeout forwards;
+
+  @keyframes glowOut {
+    100% {
+      background: transparent;
+    }
+  }
+}
+
+.anim-img {
+  animation: tilt-in-fwd-tl 0.8s $easeout 0.2s forwards;
+  @keyframes tilt-in-fwd-tl {
+    0% {
+      transform: rotateY(-20deg) rotateX(35deg) translate(-300px, -300px)
+        skew(35deg, -10deg);
+      opacity: 0.2;
+    }
+    100% {
+      transform: rotateY(0) rotateX(0deg) translate(0, 0) skew(0deg, 0deg);
+      opacity: 1;
+    }
+  }
+}
+
+.display-btn1 {
+  animation: slide-in-blurred-left 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275)
+    0.3s forwards;
+}
+
+.display-btn2 {
+  animation: slide-in-blurred-left 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275)
+    0.6s forwards;
+}
+
+@keyframes slide-in-blurred-left {
+  0% {
+    transform: translateX(-1000px) scaleX(2.5) scaleY(0.2);
+    transform-origin: 100% 50%;
+    filter: blur(40px);
+  }
+  100% {
+    transform: translateX(-50%) scaleY(1) scaleX(1);
+    transform-origin: 50% 50%;
+    filter: blur(0);
+    opacity: 1;
+  }
+}
